--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Jekyll stuff
 _site
 .sass-cache
 .jekyll-metadata
@@ -5,3 +6,16 @@ Gemfile.lock
 
 # Intellij files.
 *.iml
+
+# Latex stuff.
+*.aux
+*.bbl
+*.bst
+*.blg
+*.dvi
+*.idv
+*.lg
+*.log
+*.out
+*.png
+*.sty
