--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -24,4 +24,8 @@ contents:
         url: /interests/books.html
       - title: Debating तर्कः
         url: /interests/debate.html
+  - title: Notes and wiki
+    url: /notes/index.html
+  - title: Blog
+    url: /blog/index.html
 
