--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_title: विश्वासस्य जालक्षेत्रम् 
 company_name: vvasuki
 # this appears in the footer
 
-github_editme_path: vvasuki/site/blob/gh-pages/
+github_editme_path: vvasuki/vvasuki.github.io/blob/master/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 # Must end with a slash.
 
