--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -21,7 +21,7 @@ contents:
       - title: ಕನ್ನಡದಲ್ಲಿ ಭಾಷಾನುರಾಗದ ಪರಿಚಯ
         url: /interests/bhaashaa-kannada.html
       - title: Books
-        url: /interests/books.html
+        url: /interests/texts.md
       - title: Debating तर्कः
         url: /interests/debate.html
   - title: Notes and wiki
