--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -30,3 +30,5 @@ contents:
     url: /kAvya/
   - title: Blog
     url: /assets/blog/index.html
+  - title: Donate Via Vishvas
+    url: https://donorbox.org/dharma-via-vishvas
