--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -20,5 +20,5 @@ contents:
     url: /kAvya/
   - title: Blog
     url: /blog/
-  - title: Donate Via Vishvas
+  - title: <i class="fas fa-hand-holding-heart"></i>Donate Via Vishvas
     url: /interests/dharma-via-vishvas/
