--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -16,6 +16,12 @@ contents:
     url: /notes/
   - title: संस्काराः
     url: /saMskAra/
+  - title: संस्कृतम्
+    url: /sanskrit/
+  - title: मीमांसा
+    url: /mImAMsA/
+  - title: काव्यम्
+    url: /kAvya/
   - title: Poetry काव्यम्
     url: /kAvya/
   - title: Blog
