--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -34,5 +34,7 @@ contents:
         url: ../tipiTaka/
       - title: पाळयः
         url: ../pALi/
+      - title: भाषान्तरम्
+        url: ../bhAShAntaram/
   - title: Blog
     url: /blog/
