--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -38,5 +38,7 @@ contents:
         url: ../pALi/
       - title: भाषान्तरम्
         url: ../bhAShAntaram/
+      - title: English Lit
+        url: ../english/
   - title: Blog
     url: /blog/
