--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://vvasuki.github.io/"
+baseURL = "https://vishvAsa.github.io/"
 languageCode = "en-us"
 title = "विश्वासस्य जालक्षेत्रम् Vishvas Vasuki's website"
 theme = "sanskrit-documentation-theme-hugo"
