--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,8 @@ disablePathToLower = true
 [params]
   githubEditMePathBase = "https://github.com/vishvAsa/vishvAsa.github.io/edit/hugo-source/content/"
   contactLink = "https://github.com/vishvAsa/vishvAsa.github.io/issues/new"
+  build_img = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml/badge.svg"
+  build_url = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml"
   env = "production"
   disqusShortcode = "vvasuki-site"
 
