--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build Hugo site
 
 on:
   push:
-    branches: [ hugo-source ]
+    branches: [ master ]
   pull_request:
-    branches: [ hugo-source ]
+    branches: [ master ]
 
 jobs:
   transform:
@@ -38,4 +38,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build_github
-        publish_branch: master
+        publish_branch: gh-pages
