--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ publishDir = "build_github"
 disablePathToLower = true
 
 [params]
-  githubEditMePathBase = "https://github.com/vishvAsa/vishvAsa.github.io/edit/hugo-source/content/"
+  githubEditMePathBase = "https://github.com/vishvAsa/vishvAsa.github.io/edit/master/content/"
   contactLink = "https://github.com/vishvAsa/vishvAsa.github.io/issues/new"
   build_img = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml/badge.svg"
   build_url = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml"
