--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ disablePathToLower = true
   build_img = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml/badge.svg"
   build_url = "https://github.com/vishvAsa/vishvAsa.github.io/actions/workflows/build.yml"
   env = "production"
-  disqusShortcode = "vvasuki-site"
+  # disqusShortcode = "vvasuki-site"
 
 [outputs]
   home = ["HTML", "RSS", "JSON", "CSV"]
