--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -62,5 +62,7 @@ contents:
         url: ../bhAShAntaram/
       - title: English Lit
         url: ../english/
+      - title: Book pub
+        url: ../book-pub
   - title: Blog
     url: /blog/
