--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -12,6 +12,7 @@ contents:
   - title: Interests
     contents:
       - url: recdir://interests/
+  - url: dir://
   - title: सङ्ग्रहान्तरम्
     contents:
       - title: ज्यौतिषम्
